changes to .env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-HUGGINGFACE_INFERENCE_URL=""
+HUGGINGFACE_INFERENCE_URL="https://YOUR_INFERENCE_URL_HERE.huggingface.cloud"
 HUGGINGFACE_BEARER_TOKEN="INSERT_YOUR_TOKEN_HERE"
